fixed foldertree collapse onclick, add max-width to img tag

--- a/css/o2r.css
+++ b/css/o2r.css
@@ -27,3 +27,7 @@ ul {
 li {
 	border: none !important;
 }
+
+img{
+	max-width: 100%;
+}
